k8s/mongo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: "mongo:4.2.17-bionic"
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 27017

---

apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  selector:
    name: mongo
  ports:
    - protocol: TCP
      name: main-port
      port: 27017
      targetPort: 27017
