k8s/oauth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth
  template:
    metadata:
      labels:
        app: oauth
    spec:
      containers:
      - name: oauth
        image: "gcr.io/kafka-kubernetes-380403/oauth:latest"
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: oauth
  labels:
    app: oauth
spec:
  ports:
    - protocol: TCP
      name: 8080-8080
      port: 8080
      targetPort: 8080
  selector:
    app: oauth
  type: LoadBalancer
