k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths: 
      - path: /api/OAuth/v1/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: oauth
            port:
              number: 8080
